--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="preload" as="image" href="src/communication2.jpg">
+        <link rel="preload" as="image" href="src/montage.jpg">
         <meta http-equiv="Content-Security-Policy" content="
             default-src 'self';
             script-src 'self' https://www.instagram.com https://static.cdninstagram.com https://unpkg.com https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval';
@@ -57,7 +59,8 @@
                 <div class="container">
                     <div class="row align-items-center gy-4 gy-md-0 animate__animated" id="presentation">
                         <div class="col-12 col-md-8">
-                            <h1 class="fw-bold animate__animated animate-on-scroll">Je suis Kevin Costa Poças<br>Spécialiste en communication</h1>
+                            <h1 class="fw-bold animate__animated animate-on-scroll">Je suis Kevin Costa Poças</h1>
+                            <h1 class="fw-bold animate__animated animate-on-scroll">Spécialiste en communication</h1>
                             <h2 class="fw-light animate__animated animate-on-scroll">Bienvenue sur mon portfolio</h2>
                             <a class="btn btn-dark mt-5 animate__animated animate-on-scroll" href="#expertise" role="button">Mon expertise</a>
                         </div>
@@ -73,11 +76,11 @@
                     <h3 class="fw-light animate__animated animate-on-scroll">Communication et création de contenus</h3>
                     
                     <!-- Communication -->
-                    <div class="row gy-4 mt-4 align-items-center animate__animated animate-on-scroll">
+                    <div class="row gy-4 mt-4 align-items-center">
                         <div class="col-12 col-md-7">
 
                             <!--Progressbar-->
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -93,7 +96,7 @@
                                 </div>                               
                             </div>  
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -109,7 +112,7 @@
                                 </div>
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -125,7 +128,7 @@
                                 </div>
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -141,7 +144,7 @@
                                 </div>
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -158,20 +161,20 @@
                             </div>
 
                         </div> 
-                        <div class="col-12 offset-md-1 col-md-4">
+                        <div class="col-12 offset-md-1 col-md-4 animate__animated animate-on-scroll">
                             <img src="src/communication2.jpg" class="rounded img-shadow" alt="Communication" width="100%">
                         </div>
                     </div>
 
                     <!-- Création de contenu -->
-                    <div class="row gy-4 mt-5 align-items-center animate__animated animate-on-scroll">
-                        <div class="col-12 col-md-4">
-                            <img src="src/montage.jpg" class="rounded img-shadow" alt="Création de contenu" width="100%">
+                    <div class="row gy-4 mt-5 align-items-center">
+                        <div class="col-12 col-md-4 animate__animated animate-on-scroll">
+                            <img src="src/montage.jpg" class="rounded img-shadow" alt="Création de contenu" width="100%" loading="eager">
                         </div>
                         <div class="col-12 order-first offset-md-1 col-md-7 order-md-last">
                             
                             <!--Progressbar-->
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -187,7 +190,7 @@
                                 </div>                               
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -203,7 +206,7 @@
                                 </div>                               
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -219,7 +222,7 @@
                                 </div>                               
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -236,7 +239,7 @@
                                 </div>                               
                             </div>
 
-                            <div class="mb-3 bg-white p-3 img-shadow rounded">
+                            <div class="mb-3 bg-white p-3 img-shadow rounded animate__animated animate-on-scroll">
                                 <div class="row align-items-center">
                                     <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                                         <div class="d-flex align-items-center">
@@ -263,7 +266,7 @@
                     <h3 class="fw-lighter fw-md-light mb-5 animate__animated animate-on-scroll">Projets académiques et professionnels</h3>
 
                     <!--Carousel réduit-->
-                        <div class="mx-auto img-shadow carousel animate__animated animate-on-scroll" style="max-width: 600px;">
+                        <div class="mx-auto img-shadow carousel" style="max-width: 600px;">
                             <div id="carouselPortfolio" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
 
